# packycc

./: .gitignore  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/config/: defaults.rs  loader.rs  mod.rs  types.rs
src/core/: mod.rs  statusline.rs
src/core/segments/: cost.rs  directory.rs  git.rs  info_share.rs  mod.rs  model.rs  quota.rs  text_mode.rs  usage.rs
